# House_price

./: .gitattributes  LICENSE  Makefile  README.md  gurgaon_sectors_coordinates.csv  pyproject.toml
AnalyticsModule/: analytics.ipynb  latitude.py
Data-Cleaning-Level2/: house_cleaned.csv  merged.ipynb
Data-cleaning/: Houses.ipynb  flats.ipynb
EDA/: UnivariateEda.ipynb  gurgaon_properties_cleaned_v2.csv  multivariateEda.ipynb  pandas_profiling.ipynb
FeatureSelection/: selection.ipynb
Feature_Engineering/: feature_engineering.ipynb
Merged-Cleaning/: data-preprocessing-level-2.ipynb
MissingValue/: MissingValue.ipynb
Model_Selection/: Model_selection.ipynb  pipeline.pkl
OutliersRemoval/: OutliersRemoval.ipynb
RecommendationModule/: TestingRecommendation.ipynb  cosine_sim1.pkl  cosine_sim2.pkl  cosine_sim3.pkl  location_distance.pkl  recommendation.ipynb
Scrapping/: 99acres_Scrapping.ipynb
docs/: mkdocs.yml
docs/docs/: index.md
house_price/: __init__.py  dataset.py  features.py  plots.py
house_price/modeling/: predict.py  train.py
models/: Baseline_model.ipynb
